MarblePart::openFile(): Create a working QUrl from the selected files

The file open dialog returns the path(s) as QString.
MarblePart::openUrl() expects a QUrl.
The previous implicit conversion from QString to QUrl creates broken
QUrl instances because the file:// protocol is missing.
Fix this by calling QUrl::fromLocalPath() explicitly.

BUG: 355001
(cherry picked from commit 5f09ad0fc33627aff7d13ddff64d2f6d7b035fb8)